--- a/src/components/layout/footer.astro
+++ b/src/components/layout/footer.astro
@@ -10,7 +10,7 @@ const year = new Date().getFullYear()
 
 <footer class="flex items-center justify-between pb-12 text-end text-sm md:pb-16">
   <p>© {domain} {year}</p>
-  <Link href={siteConfig.repository}>
+  <Link href={siteConfig.repository} external>
     Source Code<Icon name="link" />
   </Link>
 </footer>
