feat: create /projects
Closes #5

--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -1,5 +1,5 @@
 ---
-import siteConfig from "@/config/site.config"
+import siteConfig from "@/site.config"
 import { STORAGE_THEME_KEY, THEME_MAP } from "@/lib/theme"
 import "@/styles/global.css"
 import "@/styles/animation.scss"
