--- a/src/components/layout/footer.astro
+++ b/src/components/layout/footer.astro
@@ -1,5 +1,5 @@
 ---
-import siteConfig from "@/config/site.config"
+import siteConfig from "@/site.config"
 import Link from "@/components/link.astro"
 import { Icon } from "astro-icon/components"
 import { Command } from "@/components/command"
