chore: update homepage text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import { Icon } from "astro-icon/components"
 <Layout>
   <div class="space-y-2">
     <p>
-      Currently working at <Link href="https://julo.se" external
-        ><b>Julo</b><Icon name="link" /></Link
+      Currently working at <Link href="https://www.atlar.com/" external
+        ><b>Atlar</b><Icon name="link" /></Link
       >.
     </p>
     <div class="flex items-center gap-0.5">
